$Id$

2005-01-30 Tilman Sauerbeck (tilman at code-monkey de)
        * src/plugins/sylpheed/sylpheed.c:
          Fixed the Sylpheed plugin, which was horribly broken

2005-01-29 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * configure.ac, src/plugins/sylpheed:
          Added Phillip Warner's Sylpheed plugin

2004-05-09 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/embrace.c: Added standard arguments -h and
          -v. The evas engine and theme to use can now be
          specified on the commandline as well.

2004-05-05 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/embrace.c: embrace_signal_get() now always returns -1
          indicating failure in case the OS doesn't know about
          realtime signals.

2004-05-03 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/plugins/mbox/mbox: Fixed a file descriptor leak.
          The plugin will re-check a mbox now if its size or mtime
          differs.

2004-04-23 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/embrace.c: Added config switch "evas_engine". Set to "gl"
          to make Embrace run off the GL X11 engine.

2004-04-22 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/main.c, src/embrace.c, src/embrace_plugin.c:
          Don't use dl_foreachfile() to load the plugins. We now
          iterate over the files in the plugin directories manually,
          since dl_foreachfile() caused some nasty problems when run
          under Valgrind resp. it didn't seem to work well on some
          systems.

2004-04-18 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/plugins/imap/imap.c: Ported the recent fixes for POP3
          to the IMAP plugin

2004-04-17 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/plugins/pop3/pop3.c: Don't connect twice to the same
          server.
        * src/plugins/maildir/maildir.c: Added timer-based checking
          to support systems that don't have dnotify.